--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   sliding_clipped_nav_bar: ^1.0.3
   font_awesome_flutter: ^9.2.0
+  liquid_swipe: ^2.1.1
+  bouncing_widget: ^2.0.0
 
 dev_dependencies:
   flutter_test:
