--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   font_awesome_flutter: ^9.2.0
   liquid_swipe: ^2.1.1
   bouncing_widget: ^2.0.0
+  animated_button: ^0.2.0
 
 dev_dependencies:
   flutter_test:
