trip =  AirPlane + Sunday changes

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   bouncing_widget: ^2.0.0
   animated_button: ^0.2.0
   url_launcher: ^6.0.15
+  provider: ^6.0.1
 
 dev_dependencies:
   flutter_test:
