--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,9 @@ dependencies:
   font_awesome_flutter: ^9.2.0
   liquid_swipe: ^2.1.1
   bouncing_widget: ^2.0.0
-  animated_button: ^0.2.0
   url_launcher: ^6.0.15
   provider: ^6.0.1
+  confetti: ^0.6.0
 
 dev_dependencies:
   flutter_test:
