--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,7 @@ dependencies:
     sdk: flutter
 
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.4
   sliding_clipped_nav_bar: ^1.0.3
   font_awesome_flutter: ^9.2.0
   liquid_swipe: ^2.1.1
@@ -42,6 +40,7 @@ dependencies:
   provider: ^6.0.1
   confetti: ^0.6.0
   get:
+  auto_size_text: 
 
 dev_dependencies:
   flutter_test:
